--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-e17 (0.16.999.050-1) UNRELEASED; urgency=low
+e17 (0.16.999.050-1) experimental; urgency=low
 
   * New upstream version (Closes: #504057)
     - Version B-D on libecore, libevas, libedje and libeet as e17 is using
@@ -11,7 +11,7 @@ e17 (0.16.999.050-1) UNRELEASED; urgency=low
   * Bump B-D on debhelper to 6.0.7 to be sure to get dh_lintian
   * Fix typo in README.Debian. (Closes: #495185)
 
- -- Albin Tonnerre <albin.tonnerre@gmail.com>  Mon, 29 Sep 2008 22:02:51 +0200
+ -- Albin Tonnerre <albin.tonnerre@gmail.com>  Mon, 10 Nov 2008 01:00:41 +0100
 
 e17 (0.16.999.043-1) experimental; urgency=low
 
