--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e17 (0.16.999.050+svn20081207-2) experimental; urgency=low
+
+  * Update dependencies for new packages names
+
+ -- Albin Tonnerre <albin.tonnerre@gmail.com>  Tue, 06 Jan 2009 21:08:29 +0100
+
 e17 (0.16.999.050+svn20081207-1) experimental; urgency=low
 
   * Upstream SVN snapshot
