--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e17 (0.16.999.050+svn20081207-3) UNRELEASED; urgency=low
+
+  * debian/e17.install: Add missing illume dicts and keyboards
+
+ -- Albin Tonnerre <albin.tonnerre@gmail.com>  Sun, 01 Feb 2009 00:22:52 +0100
+
 e17 (0.16.999.050+svn20081207-2) experimental; urgency=low
 
   * Update dependencies for new packages names
