--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ e17 (0.16.999.061-1) UNRELEASED; urgency=low
     - Previously patched in efreet. Allows the use of an e17-provided fallback
       menu in case efreet doesn't find any.
   * Update to Standards-Version 3.8.2, no change required
+  * Improve the e17-provided menu file, thanks Luca Capello (Closes: #532214)
 
  -- Albin Tonnerre <albin.tonnerre@gmail.com>  Fri, 19 Jun 2009 16:52:16 +0200
 
