Update lintian overrides

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ e17 (0.16.999.061-2) unstable; urgency=low
   * Don't Build-Depend on libasound2-dev on non-linux architectures, fixing an
     FTBFS. Thanks to Cyril Brulebois. (Closes: #536103)
   * Move e17-dbg to the debug section
+  * Remove ununsed override: possible-gpl-code-linked-with-openssl
+  * Adjust the freqset binary path for the setuid-binary override
 
  -- Albin Tonnerre <albin.tonnerre@gmail.com>  Tue, 14 Jul 2009 21:16:57 +0200
 
