--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ e17 (0.16.999.062-1) unstable; urgency=low
   * New upstream snapshot
   * Remove the 'System tools' entry in enlightenment-applications.menu, it's a
     duplicate of the 'Settings' entry
+  * New patch 03_bind_XF86PowerOff_instead_of_Execute_in_illume.diff
+    - In illume, the poweroff action is bound to the Execute key. As there's
+      no such key in Debian, use XF86PowerOff instead (Closes: #538186)
 
  -- Albin Tonnerre <albin.tonnerre@gmail.com>  Sun, 02 Aug 2009 19:48:52 +0200
 
