--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ e17 (0.16.999.062-1) unstable; urgency=low
     - In illume, the poweroff action is bound to the Execute key. As there's
       no such key in Debian, use XF86PowerOff instead (Closes: #538186)
   * Update Standards-Version to 3.8.3
+  * Fix the short description for e17-dbg
 
  -- Albin Tonnerre <albin.tonnerre@gmail.com>  Sat, 29 Aug 2009 21:41:31 +0200
 
