everything module: use x-terminal-emulator instead of hardcoding xterm

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ e17 (0.16.999.063-1) unstable; urgency=low
 
   * New upstream snapshot
   * Add new modules to the install files
+  * Add debian/patches/04_evry_fix_default_path_for_terminal.diff:
+    - Use /usr/bin/x-terminal-emulator instead of hardcoding xterm
 
  -- Albin Tonnerre <albin.tonnerre@gmail.com>  Sat, 05 Dec 2009 12:56:10 +0100
 
