--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ e17 (0.16.999.063-1) unstable; urgency=low
   * Add new modules to the install files
   * Add debian/patches/04_evry_fix_default_path_for_terminal.diff:
     - Use /usr/bin/x-terminal-emulator instead of hardcoding xterm
+  * Update my email address
 
- -- Albin Tonnerre <albin.tonnerre@gmail.com>  Sat, 05 Dec 2009 12:56:10 +0100
+ -- Albin Tonnerre <lutin@debian.org>  Sat, 05 Dec 2009 12:56:10 +0100
 
 e17 (0.16.999.062-1) unstable; urgency=low
 
